<resources>
    <string name="app_name">Free Movies</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome to your Favorite Movies App!"</string>
    <string name="invalid_username">Invalid username. Please try again</string>
    <string name="invalid_password">Invalid password. Please try again</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_logo">app_logo</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="register">Register</string>
    <string name="made_by_beatriz_cangas_perez">Made by: Beatriz Cangas Perez</string>
    <string name="messege">messege</string>
    <string name="overview">Overview</string>

</resources>
